[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/battle/battle_actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/battle/battle_character_test.gd" type="Script" id=2]
[ext_resource path="res://art/pc/testPCNeutral.png" type="Texture" id=3]
[ext_resource path="res://art/pc/testPCAction.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 22.8617

[node name="battle_actor" index="0" instance=ExtResource( 1 )]

script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "default"

[node name="check_up" type="RayCast2D" parent="." index="1"]

enabled = true
exclude_parent = true
cast_to = Vector2( 0, -50 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="check_left" type="RayCast2D" parent="." index="2"]

enabled = true
exclude_parent = true
cast_to = Vector2( -45, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="check_right" type="RayCast2D" parent="." index="3"]

enabled = true
exclude_parent = true
cast_to = Vector2( 45, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="check_down" type="RayCast2D" parent="." index="4"]

enabled = true
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="ghost_zone" type="Node2D" parent="." index="5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="6"]

shape = SubResource( 2 )
_sections_unfolded = [ "Transform", "Z Index" ]


